# Embedded_System_Design_Competition_2025

./: README.md
drone_project_Ver1.0/src/fire_drone/: CMakeLists.txt  package.xml
drone_project_Ver1.0/src/fire_drone/config/: params.yaml
drone_project_Ver1.0/src/fire_drone/launch/: fire_detection.launch.py
drone_project_Ver1.0/src/fire_drone/msg/: FireDetectionResult.msg
drone_project_Ver1.0/src/fire_drone/src/: drone_controller.py  ir_camere.py  main_controller.py  yolov5_detector.py
drone_project_Ver1.0/src/fire_drone/yolo/: train.py  xmlToTxt.py
drone_project_Ver1.0/src/fire_drone/yolo/data/labels/: val.cache
drone_project_Ver1.0/src/fire_drone/yolo/utils/: loss.py
drone_ros2_Ver1.0/: setup_environment.sh
drone_ros2_Ver1.0/drone_control/config/: yolov5_config.yaml
drone_ros2_Ver1.0/drone_control/launch/: fire_detection.launch.py
drone_ros2_Ver1.0/drone_control/src/: drone_control_node.py  fire_detection_node.py  gui_node.py  thermal_camera_node.py
yolo_Ver1.0_PC/: README.md  cleanDataset.py  demo.py  detect.py  train.py
yolo_Ver1.0_PC/utils/: general.py
yolo_lite_Ver.2.0_PC/data/labels/: train.cache
yolo_lite_Ver.2.0_PC/utils/: datasets.py
源项目计划（已完成）/: 3.13项目方案.docx  solutionsFromDeepseek.docx  三套方案策划.docx  赛道推荐.docx
