<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fire_drone</name>
  <version>0.0.0</version>
  <description>ROS2 package for drone fire detection</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <!-- 构建依赖 -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend> <!-- 新增 -->

  <!-- 执行依赖 -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  
  <!-- 消息生成依赖 -->
  <depend>rosidl_default_runtime</depend> <!-- 新增 -->
  <member_of_group>rosidl_interface_packages</member_of_group> <!-- 新增 -->

  <!-- 测试依赖 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>